Fix spacing in delete link

--- a/app/assets/stylesheets/components/surveys.scss
+++ b/app/assets/stylesheets/components/surveys.scss
@@ -6,6 +6,8 @@
   }
 
   .survey__destroy {
+    margin-top: 20px;
+
     text-align: right;
     font-size: $small-text;
 
